--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,7 @@
 				<a href="index.html">HOME</a>
 			</div>
 			<a href="resume.html">
-			<img src="MyPic.jpg" alt="Link to resume">
+			<img src="MyPic.JPG" alt="Link to resume">
 			</a>
 		</div>
 			<h3>
