--- a/bio.html
+++ b/bio.html
@@ -11,7 +11,9 @@
 	</head>
 
 	<body>
-		<h1> Avita Sharma </h1>
+		<a href="https://github.com/avita21">
+			<h1> Avita Sharma </h1>
+		</a>
 		<div id="content">
 			<div id="mail">
 				<a href="resume.html">RESUME</a> 
